# SuperLeague

./: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  test_lcu.ps1  tsconfig.json  vite.config.ts
src/: App.tsx  index.css  main.tsx  pages_config.ts  sidebar.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  db.rs  lcu.rs  lib.rs  main.rs  state.rs
src/hooks/: useLcu.ts
src/lib/: lcu-api.ts  superleague-api.ts  types.ts  utils.ts
src/pages/: accounts.tsx  builds.tsx  challenges.tsx  champion.tsx  dashboard.tsx  debug.tsx  eternals.tsx  lobby.tsx  mastery.tsx  profile.tsx  randomizer.tsx  settings.tsx  skins.tsx  teams.tsx
