[package]
name = "super-league"
version = "0.1.0"
description = "SuperLeague — League of Legends Companion App"
authors = ["SuperLeague"]
edition = "2021"

[lib]
name = "super_league_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
irelia = { version = "0.11.0", features = ["rest"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "native-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
urlencoding = "2"
base64 = "0.22"
sysinfo = "0.33"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
